# pub-sub-rs

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json  install-dependencies.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/bookkeeping/: Cargo.toml
examples/bookkeeping/src/: lib.rs  service.rs  subscriber.rs
examples/messages/je-created/: Cargo.toml
examples/messages/je-created/src/: lib.rs
examples/messages/order-created/: Cargo.toml
examples/messages/order-created/src/: lib.rs
examples/notifications/: Cargo.toml
examples/notifications/src/: service.rs  subscriber.rs
examples/orders/: Cargo.toml
examples/orders/src/: lib.rs  service.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/worker/: Cargo.toml  wrangler.toml
examples/worker/src/: console_notifications.rs  lib.rs  orders.rs  router.rs
pub-sub/in-memory/: Cargo.toml  README.md
pub-sub/in-memory/src/: lib.rs  subscribers.rs  topic.rs
pub-sub/trait/: Cargo.toml  README.md
pub-sub/trait/src/: lib.rs  publisher.rs  subscriber.rs
