[workspace]
members = [
    "examples/notifications",
    "examples/bookkeeping",
    "examples/orders",
    "examples/simple",
    "pub-sub/in-memory",
    "pub-sub/trait",
    "examples/messages/order-created",
    "examples/messages/je-created",
]
resolver = "2"

[workspace.dependencies]
futures = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"
