[workspace]
members = [
    "examples/notifications",
    "examples/bookkeeping",
    "examples/orders",
    "examples/simple",
    "pub-sub/in-memory",
    "pub-sub/trait",
    "examples/messages/order-created",
    "examples/messages/je-created",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8" }
futures = "0.3"
tokio = "1.43"
tower-service = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"
