[workspace]
members = [
    "examples/bookkeeping",
    "examples/messages/je-created",
    "examples/messages/order-created",
    "examples/notifications",
    "examples/orders",
    "examples/simple",
    "examples/worker",
    "pub-sub/in-memory",
    "pub-sub/trait",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8" }
futures = "0.3"
tokio = "1.43"
tower-service = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "s"
