[package]
name = "simple-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bookkeeping_example = { path = "../bookkeeping" }
in-memory-pub-sub = { path = "../../pub-sub/in-memory" }
notifications_example = { path = "../notifications" }
orders_example = { path = "../orders" }

futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
