[package]
name = "examples-worker"
version = "0.1.0"
edition = "2021"
authors = ["Artur Gubaidullin <lapteuh@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bookkeeping-example = { path = "../bookkeeping" }
in-memory-pub-sub = { path = "../../pub-sub/in-memory" }
orders-example = { path = "../orders" }
order_created_example = { path = "../messages/order-created" }
pub-sub-trait = { path = "../../pub-sub/trait" }

axum = { version = "0.8", default-features = false }
console_error_panic_hook = { version = "0.1" }
futures = { workspace = true }
tower-service = { workspace = true }
worker = { version = "0.5.0", features = ['http', 'axum'] }
worker-macros = { version = "0.5.0", features = ['http'] }
